# rust_system_monitor

./: Cargo.toml  LICENSE  README.md  config.toml
src/: app.rs  main.rs
src/config/: app_config.rs
src/enums/: mod.rs  monitor_type_enum.rs  supported_language_enum.rs  tray_menu_event_enum.rs  ui_command_enum.rs
src/error/: app_error.rs  mod.rs
src/i18n/: i18n_manager.rs  mod.rs
src/monitor/: cpu_usage_monitor.rs  mod.rs  monitor.rs  ram_usage_monitor.rs
src/tray/: cpu_usage_tray_item.rs  mod.rs  ram_usage_tray_item.rs  tray.rs
src/ui/: ui.rs
src/ui/components/: mod.rs  toggle_switch_component.rs
translations/en-US/: main.ftl
translations/pl/: main.ftl
