[package]
name = "rust_system_monitor"
version = "0.1.0"
edition = "2024"
authors = ["Mikołaj Gawron <gawrmiko@gmail.com>"]
description = "Windows system monitor in tray."
readme = "README.md"
keywords = ["system monitor", "monitor", "system", "usage"]

[dependencies]
sysinfo = "0.37.0"
tray-icon = "0.21.1"
eframe = "0.32.2"
serde = { version = "1.0", features = ["derive"] }
confy = "1.0.0"
image = "0.25"
imageproc = "0.25"
ab_glyph = "0.2"
thiserror = "2.0.16"
crossbeam-channel = "0.5.15"
strum = "0.27.2"
strum_macros = "0.27.2"
config = { version = "0.15.15", features = ["toml"] }
fluent = "0.17.0"
fluent-bundle = "0.16.0"
unic-langid = { version = "0.9.6", features = ["macros"] }
locale_config = "0.3.0"
toml = "0.9.5"
auto-launch = "0.5.0"